--- a/Clutch/Clutch.csproj
+++ b/Clutch/Clutch.csproj
@@ -73,6 +73,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FluentClient.cs" />
+    <Compile Include="IFluentRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
